...
          color: theme.colorScheme.surface,
          child: SizedBox(
            height: 44,
            child: Row(
              children: [
                button(
                  'Back',
                  Icons.arrow_back,
                  _canGoBack ? _view.goBack : null,
                ),
                button(
                  'Forward',
                  Icons.arrow_forward,
...
